// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit tests issue #4 subjectClosed: false 1`] = `
PolyTree {
  "_childs": [
    PolyNode {
      "_childs": [],
      "_contour": [
        {
          "x": 10,
          "y": 10,
        },
        {
          "x": 50,
          "y": 10,
        },
      ],
      "_index": 0,
      "_isOpen": true,
      "_parent": [Circular],
    },
  ],
  "_contour": [],
  "_index": 0,
  "_isOpen": false,
  "_parent": undefined,
  "_total": 1,
}
`;

exports[`unit tests issue #4 subjectClosed: true 1`] = `
PolyTree {
  "_childs": [
    PolyNode {
      "_childs": [],
      "_contour": [
        {
          "x": 50,
          "y": 50,
        },
        {
          "x": 10,
          "y": 10,
        },
        {
          "x": 50,
          "y": 10,
        },
      ],
      "_index": 0,
      "_isOpen": false,
      "_parent": [Circular],
    },
  ],
  "_contour": [],
  "_index": 0,
  "_isOpen": false,
  "_parent": undefined,
  "_total": 1,
}
`;

exports[`unit tests issue #9 1`] = `
PolyTree {
  "_childs": [
    PolyNode {
      "_childs": [
        PolyNode {
          "_childs": [],
          "_contour": [
            {
              "x": -5,
              "y": -5,
            },
            {
              "x": -5,
              "y": 5,
            },
            {
              "x": 5,
              "y": 5,
            },
            {
              "x": 5,
              "y": -5,
            },
          ],
          "_index": 0,
          "_isOpen": false,
          "_parent": [Circular],
        },
      ],
      "_contour": [
        {
          "x": 50,
          "y": 50,
        },
        {
          "x": -50,
          "y": 50,
        },
        {
          "x": -50,
          "y": -50,
        },
        {
          "x": 50,
          "y": -50,
        },
      ],
      "_index": 0,
      "_isOpen": false,
      "_parent": [Circular],
    },
  ],
  "_contour": [],
  "_index": 0,
  "_isOpen": false,
  "_parent": undefined,
  "_total": 2,
}
`;

exports[`unit tests simple polygons boolean operations clipType: difference, fillType: evenOdd 1`] = `
[
  [
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
  ],
  [
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: difference, fillType: negative 1`] = `[]`;

exports[`unit tests simple polygons boolean operations clipType: difference, fillType: nonZero 1`] = `
[
  [
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
  ],
  [
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: difference, fillType: positive 1`] = `
[
  [
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
  ],
  [
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: intersection, fillType: evenOdd 1`] = `
[
  [
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 2251799813685247,
      "y": 10,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: intersection, fillType: negative 1`] = `[]`;

exports[`unit tests simple polygons boolean operations clipType: intersection, fillType: nonZero 1`] = `
[
  [
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 2251799813685247,
      "y": 10,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: intersection, fillType: positive 1`] = `
[
  [
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 2251799813685247,
      "y": 10,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: union, fillType: evenOdd 1`] = `
[
  [
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 30,
    },
    {
      "x": 10,
      "y": 30,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 10,
      "y": 0,
    },
    {
      "x": 2251799813685247,
      "y": 0,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: union, fillType: negative 1`] = `[]`;

exports[`unit tests simple polygons boolean operations clipType: union, fillType: nonZero 1`] = `
[
  [
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 30,
    },
    {
      "x": 10,
      "y": 30,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 10,
      "y": 0,
    },
    {
      "x": 2251799813685247,
      "y": 0,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: union, fillType: positive 1`] = `
[
  [
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 30,
    },
    {
      "x": 10,
      "y": 30,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 10,
      "y": 0,
    },
    {
      "x": 2251799813685247,
      "y": 0,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: xor, fillType: evenOdd 1`] = `
[
  [
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 30,
    },
    {
      "x": 10,
      "y": 30,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
  ],
  [
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 10,
      "y": 0,
    },
    {
      "x": 2251799813685247,
      "y": 0,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: xor, fillType: negative 1`] = `[]`;

exports[`unit tests simple polygons boolean operations clipType: xor, fillType: nonZero 1`] = `
[
  [
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 30,
    },
    {
      "x": 10,
      "y": 30,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
  ],
  [
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 10,
      "y": 0,
    },
    {
      "x": 2251799813685247,
      "y": 0,
    },
  ],
]
`;

exports[`unit tests simple polygons boolean operations clipType: xor, fillType: positive 1`] = `
[
  [
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 30,
    },
    {
      "x": 10,
      "y": 30,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 20,
    },
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
  ],
  [
    {
      "x": 2251799813685247,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 10,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 10,
      "y": 10,
    },
    {
      "x": 10,
      "y": 0,
    },
    {
      "x": 2251799813685247,
      "y": 0,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: miter, endType: closedLine, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: miter, endType: closedLine, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: miter, endType: closedLine, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580335,
      "y": 25,
    },
    {
      "x": -5,
      "y": 25,
    },
    {
      "x": -5,
      "y": 5,
    },
    {
      "x": 3002399751580335,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: miter, endType: closedPolygon, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: miter, endType: closedPolygon, delta: 0 1`] = `
[
  [
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: miter, endType: closedPolygon, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580335,
      "y": 25,
    },
    {
      "x": -5,
      "y": 25,
    },
    {
      "x": -5,
      "y": 5,
    },
    {
      "x": 3002399751580335,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: miter, endType: openButt, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: miter, endType: openButt, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: miter, endType: openButt, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580335,
      "y": 5,
    },
    {
      "x": 3002399751580335,
      "y": 25,
    },
    {
      "x": 0,
      "y": 25,
    },
    {
      "x": 0,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: miter, endType: openRound, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: miter, endType: openRound, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: miter, endType: openRound, delta: 5 1`] = `
[
  [
    {
      "x": -5,
      "y": 11,
    },
    {
      "x": -5,
      "y": 8,
    },
    {
      "x": -3,
      "y": 6,
    },
    {
      "x": 0,
      "y": 5,
    },
    {
      "x": 3002399751580335,
      "y": 5,
    },
    {
      "x": 3002399751580335,
      "y": 25,
    },
    {
      "x": 0,
      "y": 25,
    },
    {
      "x": -3,
      "y": 24,
    },
    {
      "x": -5,
      "y": 21,
    },
    {
      "x": -5,
      "y": 18,
    },
    {
      "x": -3,
      "y": 16,
    },
    {
      "x": 0,
      "y": 15,
    },
    {
      "x": -3,
      "y": 14,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: miter, endType: openSquare, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: miter, endType: openSquare, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: miter, endType: openSquare, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580335,
      "y": 5,
    },
    {
      "x": 3002399751580335,
      "y": 25,
    },
    {
      "x": -5,
      "y": 25,
    },
    {
      "x": -5,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: round, endType: closedLine, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: round, endType: closedLine, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: round, endType: closedLine, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580333,
      "y": 6,
    },
    {
      "x": 3002399751580335,
      "y": 10,
    },
    {
      "x": 3002399751580335,
      "y": 20,
    },
    {
      "x": 3002399751580334,
      "y": 23,
    },
    {
      "x": 3002399751580330,
      "y": 25,
    },
    {
      "x": 0,
      "y": 25,
    },
    {
      "x": -3,
      "y": 24,
    },
    {
      "x": -5,
      "y": 20,
    },
    {
      "x": -5,
      "y": 10,
    },
    {
      "x": -4,
      "y": 7,
    },
    {
      "x": 0,
      "y": 5,
    },
    {
      "x": 3002399751580330,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: round, endType: closedPolygon, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: round, endType: closedPolygon, delta: 0 1`] = `
[
  [
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: round, endType: closedPolygon, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580333,
      "y": 6,
    },
    {
      "x": 3002399751580335,
      "y": 10,
    },
    {
      "x": 3002399751580335,
      "y": 20,
    },
    {
      "x": 3002399751580334,
      "y": 23,
    },
    {
      "x": 3002399751580330,
      "y": 25,
    },
    {
      "x": 0,
      "y": 25,
    },
    {
      "x": -3,
      "y": 24,
    },
    {
      "x": -5,
      "y": 20,
    },
    {
      "x": -5,
      "y": 10,
    },
    {
      "x": -4,
      "y": 7,
    },
    {
      "x": 0,
      "y": 5,
    },
    {
      "x": 3002399751580330,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: round, endType: openButt, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: round, endType: openButt, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: round, endType: openButt, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580330,
      "y": 5,
    },
    {
      "x": 3002399751580333,
      "y": 6,
    },
    {
      "x": 3002399751580335,
      "y": 10,
    },
    {
      "x": 3002399751580335,
      "y": 20,
    },
    {
      "x": 3002399751580334,
      "y": 23,
    },
    {
      "x": 3002399751580330,
      "y": 25,
    },
    {
      "x": 0,
      "y": 25,
    },
    {
      "x": 0,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: round, endType: openRound, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: round, endType: openRound, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: round, endType: openRound, delta: 5 1`] = `
[
  [
    {
      "x": -5,
      "y": 11,
    },
    {
      "x": -5,
      "y": 8,
    },
    {
      "x": -3,
      "y": 6,
    },
    {
      "x": 0,
      "y": 5,
    },
    {
      "x": 3002399751580330,
      "y": 5,
    },
    {
      "x": 3002399751580333,
      "y": 6,
    },
    {
      "x": 3002399751580335,
      "y": 10,
    },
    {
      "x": 3002399751580335,
      "y": 20,
    },
    {
      "x": 3002399751580334,
      "y": 23,
    },
    {
      "x": 3002399751580330,
      "y": 25,
    },
    {
      "x": 0,
      "y": 25,
    },
    {
      "x": -3,
      "y": 24,
    },
    {
      "x": -5,
      "y": 21,
    },
    {
      "x": -5,
      "y": 18,
    },
    {
      "x": -3,
      "y": 16,
    },
    {
      "x": 0,
      "y": 15,
    },
    {
      "x": -3,
      "y": 14,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: round, endType: openSquare, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: round, endType: openSquare, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: round, endType: openSquare, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580330,
      "y": 5,
    },
    {
      "x": 3002399751580333,
      "y": 6,
    },
    {
      "x": 3002399751580335,
      "y": 10,
    },
    {
      "x": 3002399751580335,
      "y": 20,
    },
    {
      "x": 3002399751580334,
      "y": 23,
    },
    {
      "x": 3002399751580330,
      "y": 25,
    },
    {
      "x": -5,
      "y": 25,
    },
    {
      "x": -5,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: square, endType: closedLine, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: square, endType: closedLine, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: square, endType: closedLine, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580335,
      "y": 8,
    },
    {
      "x": 3002399751580335,
      "y": 22,
    },
    {
      "x": 3002399751580332,
      "y": 25,
    },
    {
      "x": -2,
      "y": 25,
    },
    {
      "x": -5,
      "y": 22,
    },
    {
      "x": -5,
      "y": 8,
    },
    {
      "x": -2,
      "y": 5,
    },
    {
      "x": 3002399751580332,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: square, endType: closedPolygon, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: square, endType: closedPolygon, delta: 0 1`] = `
[
  [
    {
      "x": 3002399751580330,
      "y": 20,
    },
    {
      "x": 0,
      "y": 20,
    },
    {
      "x": 0,
      "y": 10,
    },
    {
      "x": 3002399751580330,
      "y": 10,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: square, endType: closedPolygon, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580335,
      "y": 8,
    },
    {
      "x": 3002399751580335,
      "y": 22,
    },
    {
      "x": 3002399751580332,
      "y": 25,
    },
    {
      "x": -2,
      "y": 25,
    },
    {
      "x": -5,
      "y": 22,
    },
    {
      "x": -5,
      "y": 8,
    },
    {
      "x": -2,
      "y": 5,
    },
    {
      "x": 3002399751580332,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: square, endType: openButt, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: square, endType: openButt, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: square, endType: openButt, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580332,
      "y": 5,
    },
    {
      "x": 3002399751580335,
      "y": 8,
    },
    {
      "x": 3002399751580335,
      "y": 22,
    },
    {
      "x": 3002399751580332,
      "y": 25,
    },
    {
      "x": 0,
      "y": 25,
    },
    {
      "x": 0,
      "y": 5,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: square, endType: openRound, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: square, endType: openRound, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: square, endType: openRound, delta: 5 1`] = `
[
  [
    {
      "x": -5,
      "y": 11,
    },
    {
      "x": -5,
      "y": 8,
    },
    {
      "x": -3,
      "y": 6,
    },
    {
      "x": 0,
      "y": 5,
    },
    {
      "x": 3002399751580332,
      "y": 5,
    },
    {
      "x": 3002399751580335,
      "y": 8,
    },
    {
      "x": 3002399751580335,
      "y": 22,
    },
    {
      "x": 3002399751580332,
      "y": 25,
    },
    {
      "x": 0,
      "y": 25,
    },
    {
      "x": -3,
      "y": 24,
    },
    {
      "x": -5,
      "y": 21,
    },
    {
      "x": -5,
      "y": 18,
    },
    {
      "x": -3,
      "y": 16,
    },
    {
      "x": 0,
      "y": 15,
    },
    {
      "x": -3,
      "y": 14,
    },
  ],
]
`;

exports[`unit tests simple polygons offset joinType: square, endType: openSquare, delta: -5 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: square, endType: openSquare, delta: 0 1`] = `[]`;

exports[`unit tests simple polygons offset joinType: square, endType: openSquare, delta: 5 1`] = `
[
  [
    {
      "x": 3002399751580332,
      "y": 5,
    },
    {
      "x": 3002399751580335,
      "y": 8,
    },
    {
      "x": 3002399751580335,
      "y": 22,
    },
    {
      "x": 3002399751580332,
      "y": 25,
    },
    {
      "x": -5,
      "y": 25,
    },
    {
      "x": -5,
      "y": 5,
    },
  ],
]
`;
